<resources>
    <string name="app_name">ShopNet</string>
    <string name="sifra">Šifra</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="uloguj_se">Uloguj se</string>
    <string name="registracija">Registracija</string>
    <string name="title_activity_maps">Map</string>
    <string name="dodaj_popust">Dodaj popust</string>
    <string name="opis_servisa">Servis koji prati lokaciju korisnika i salje notifikacije.</string>
    <string name="svidja_mi_se">Sviđa mi se</string>
</resources>
